lint: FQCN for builtins, boolean literals, whitespace & workflow bracket spacing

--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -2,11 +2,11 @@
 - name: Local server setup automation
   hosts: all
   become: true
-  gather_facts: yes
+  gather_facts: true
 
   pre_tasks:
     - name: Show target host
-      debug:
+      ansible.builtin.debug:
         msg: "Running on {{ inventory_hostname }} ({{ ansible_facts['os_family'] }} {{ ansible_facts['distribution_version'] }})"
 
   roles:
