--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,10 +1,10 @@
 
 ---
 - name: Install Docker (Debian/Ubuntu)
-  apt:
+  ansible.builtin.apt:
     name: docker.io
     state: present
-    update_cache: yes
+    update_cache: true
   when: ansible_facts['os_family'] == 'Debian'
 
 - name: Install Docker (RedHat/Amazon)
@@ -17,11 +17,11 @@
   service:
     name: "{{ 'docker' if ansible_facts['os_family'] == 'RedHat' else 'docker' }}"
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Add user to docker group (if docker_user provided)
   user:
     name: "{{ docker_user | default(ansible_user_id) }}"
     groups: docker
-    append: yes
+    append: true
   when: (docker_user | default(ansible_user_id)) | length > 0
