--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,4 +1,3 @@
-
 ---
 - name: Install Docker (Debian/Ubuntu)
   ansible.builtin.apt:
@@ -8,19 +7,19 @@
   when: ansible_facts['os_family'] == 'Debian'
 
 - name: Install Docker (RedHat/Amazon)
-  yum:
+  ansible.builtin.yum:
     name: docker
     state: present
   when: ansible_facts['os_family'] == 'RedHat'
 
 - name: Ensure Docker service is enabled and started
-  service:
+  ansible.builtin.service:
     name: "{{ 'docker' if ansible_facts['os_family'] == 'RedHat' else 'docker' }}"
     state: started
     enabled: true
 
 - name: Add user to docker group (if docker_user provided)
-  user:
+  ansible.builtin.user:
     name: "{{ docker_user | default(ansible_user_id) }}"
     groups: docker
     append: true
