--- a/roles/flask_app/tasks/main.yml
+++ b/roles/flask_app/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Ensure Python venv package present (Debian/Ubuntu)
-  apt:
+  ansible.builtin.apt:
     name: python3-venv
     state: present
-    update_cache: yes
+    update_cache: true
   when: ansible_facts['os_family'] == 'Debian'
 
 - name: Create app directory
