--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,7 @@
 repos:
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
-    hooks:
-      - id: yamllint
+    hooks: [{ id: yamllint }]
   - repo: https://github.com/ansible/ansible-lint
     rev: v24.9.2
-    hooks:
-      - id: ansible-lint
+    hooks: [{ id: ansible-lint }]
